_sass/custom/custom.scss
// add label classes
.label-grey {
  background-color: $grey-dk-000;
  color: $grey-dk-200;
}
.label-pink {
  background-color: #f9f;
}
.label-white {
  background-color: $grey-lt-000;
  color: $grey-dk-200;
}

// make the link to theme page invisible
.site-footer {
  visibility: hidden;
}

// make no border for the icon at the top of nav
.site-header {
  border: none;
}


// this broke the responsive layout so it's commented out
// .side-bar {
//   width: calc((100% - 1364px) / 2 + 264px);
// }
// #top {
//   margin-left: calc( (100% - 1364px) / 2 + 264px );
// }



.nogap > * {
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
// for some reason, doesn't work with the jekyll generated lists
.nolist * {
  list-style: none;
}

// defines highlight class for use in <b> or <i> tags
.hlblue {
  color: #ccf;
}
.hlyellow {
  color: #ffc;
}
.hlgreen {
  color: #afc;
}


// adds a background to the top of the page
html {
  // background: $grey-dk-300;
}
body {
  background: $body-background-color;
}
#top {
  // background: rgba(60, 60, 70, 0.9);
  max-width: 100%;
  background-image: url("/img/header.jpg");
  background-repeat: no-repeat;
  background-size: contain;
}
#main-content {
  max-width: 800px;
}
#main-header {
  background: transparent;
}
#main-header > .search {
  background: transparent;
}
#main-header > .search > .search-input {
  background: transparent;
}
// ---------------------------------
#search-input:empty {
  // background: rgba(100, 100, 100, 0.7);
  background: transparentize($search-background-color, 0.7);
  border-radius: 0px 0px 40px 0px;
  box-shadow: 4px 4px 5px rgba(40,40,40,0.5);
  transition: all 0.5s ease-in-out;
}
#search-input:focus {
  background: $search-background-color;
  border-radius: 0px 0px 0px 0px;
  transition: all 0.5s ease-in-out;
}
.main-header * {
  overflow: visible;
}
#main-header > .search {
  background-color: transparent;
}
.aux-nav-list > .aux-nav-list-item > .site-button {
  // background-color: rgba(10, 10, 11, 0.2);
  background-color: transparentize($base-button-color, 0.2);
  border-radius: 10px;
  margin-left: 20px;
  height: 40px;
  margin-top: 10px;
}
.aux-nav-list > .aux-nav-list-item > .site-button {
  color: #7ae;
}


// box shadow (doesn't work because can't add divs in markdown without things breaking)
.box-shadow {
  box-shadow: 4px 4px 20px rgba(40,40,40,0.9);
}


.imghover {
  filter: brightness(100%);
  transition: all 0.2s ease;
}
.imghover:hover {
  filter: brightness(40%);
}
.imgcenter {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(calc(240px - 50%), calc(50% + 100px));
  font-size: 30px;
  color: #eee;
  background: #333;
  padding: 2px 8px 2px 8px;
  border-radius: 8px;
  font-family: arial;
  opacity: 0.8;
}
.yt-thumb {
  position: relative;
  max-width: 480px;
  max-height: 360px;
}

// ---------------------------------

hr {
  background-color: #5b5b68;
}
.main-content hr + * {
  margin-top: 0 !important
}

h2, .text-beta {
  padding-bottom: 0.2em;
  border-bottom: 1px solid #5b5b68;
}

h3, .text-gamma {
  font-size:18px !important
}
@media (min-width: 31.25rem) {
  h3, .text-gamma {
    font-size:20px !important;
  }
}

h2 + h3 {
  margin-top: 1em !important;
}

h4, .text-delta {
  font-size:15px !important;
  font-weight:500 !important;
  text-transform:none;
  letter-spacing:inherit;
  display:inline-block !important;
}
@media (min-width: 31.25rem) {
  h4, .text-delta {
    font-size:16px !important 
  }
}

h5, .text-epsilon {
  font-size:12px !important;
  color:#f5f6fa;
}
@media (min-width: 31.25rem) {
  h5, .text-epsilon {
    font-size:14px !important
  }
}

.main-content h1+p,
.main-content h2+p,
.main-content h3+p,
.main-content h4+p,
.main-content h5+p,
.main-content h6+p {
  margin-top:0.8em;
}

.label {
  margin-right: 0;
  vertical-align: text-bottom;
}

summary > h2 {
  display: inline-block;
  width: 100%;
  margin-top: 1.5em !important;
}

details > summary {
  list-style: none;
}
summary::-webkit-details-marker {
  display: none
}
summary > h2::after {
  content: ' ►';
  font-size:8px;
  margin-left:3px;
  vertical-align: middle;
  display:inline-block;
}
details[open] summary > h2::after {
  content: " ▼";
}
@media (min-width: 50rem) {
  summary > h2::after {
    display:none;
  }
  summary > h2::before {
    content: ' ►';
    margin-left:-20px;
    font-size:10px;
    width:14px;
    vertical-align: middle;
    display:inline-block;
  }
  details[open] summary > h2::before {
    content: " ▼";
  }
}

// figure related

figure {
  margin: 1em auto;
  width: fit-content;
  // background-color: #bbbbbb22;
  // padding: 5px;
}

figcaption {
  font-size: 12px;
  text-align: center;
}

figure > img {
  max-width: 100%;
  height: auto;
  border: 2px solid #777;
}

@media (max-width: 31.25rem) {
  figure {
    max-width: 100% !important;
  }
}
@media (min-width: 31.25rem) {
  figure.float-right {
    margin: 1em;
    margin-right: 0em;
  }

  figure.float-left {
    margin: 1em;
    margin-left: 0em;
  }
}
//

